@@ -43,8 +43,8 @@
 				<input type='text' id='txtMobPresetName' /><br/>
 
 				<div class="boxCommand">
-					<span class="cmdSave" onclick="alert('not implemented');">Save Preset</span>
-					<span class="cmdDelete" onclick="alert('not implemented');">Exclude</span>
+					<span class="cmdSave" onclick="mobPresetSave();">Save Preset</span>
+					<span class="cmdDelete" onclick="mobPresetDelete();">Exclude</span>
 				</div>
 			</div>
 			<div class="box_props" class="clear">
