@@ -22,6 +22,9 @@ alpha 0.2
 - added timer to update the command text output automatically;
 - added support to set and load mob properties on the current selected preset;
 - added interface to customize mob properties;
+- added witch and enderman to the mob list;
+- added ability to save and delete custom presets. Fixed presets can't be removed or changed;
+- added method to clone with 'strong type', so I can clone mobs for custom presets;
 - polished properties interface;
 - resolved conflict with 'cloning' objects creating conflict with spawner checkErrors;	
 - updated 'cloning' methods to support nested objects;
